Fixed light mode text visibility problem
Text color in light mode wasn't readable.

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
     --dark-grey: #bbb;
     --dark-blue: #ffffff;
     --darker-blue: #7e9fd3;
+    --near-white: #08111f;
 }
 
 body{
